<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chores.add.AddChoreActivity">

    <TextView
        android:id="@+id/tvAddChore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_chore"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilHouseholdTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddChore">

        <EditText
            android:id="@+id/etChoreTitle"
            android:layout_width="250dp"
            android:padding="15dp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilChoreDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilHouseholdTitle">

        <EditText
            android:id="@+id/etChoreDescription"
            android:layout_width="250dp"
            android:padding="15dp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:hint="Description"
            android:inputType="text"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilChoreRecurrence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilChoreDescription">

        <EditText
            android:id="@+id/etChoreRecurrence"
            android:layout_width="250dp"
            android:padding="15dp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:hint="Recurrence"
            android:inputType="number"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnAddChore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilChoreRecurrence"/>

</androidx.constraintlayout.widget.ConstraintLayout>